# Triage-SBOM

./: .gitignore  AI_USAGE.md  Dockerfile  README.md  TriageSBOM_Deck.pptx  app.py  docker-compose.yml  pyproject.toml  requirements.txt  run.bat  run.sh  setup.ps1  setup.sh
.streamlit/: config.toml
config/: weights.json
tests/: test_compare.py  test_feeds_live.py  test_osv_live.py  test_ranking.py
tests/fixtures/: epss_cache.csv  epss_snapshot.csv  kev_cache.json  kev_snapshot.json  osv_cache.json  osv_offline.json  sample.cdx.json
triagesbom/: __init__.py  __main__.py  compare.py  cvss.py  enrich.py  models.py  osv_client.py  output.py  pipeline.py  sbom.py  score.py
