[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "triagesbom"
version = "0.1.0"
description = "SBOM vulnerability prioritizer: rank CVEs by EPSS + CISA KEV + CVSS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
    "requests>=2.28",
    "streamlit>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
ui = [
    "streamlit>=1.28.0",
]

[project.scripts]
triagesbom = "triagesbom.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["triagesbom*"]
